--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -51,4 +51,9 @@
       }
     }
   }
+
+  // A estilização do botão no Header se deve ao contexto que ele é aplicado
+  button { 
+    margin-left: auto;
+  }
 }
